feat: Add GPU support for Concourse CI workers
Implement comprehensive GPU support for Concourse CI workers with NVIDIA GPU
acceleration. Workers can now execute GPU-accelerated workloads with automatic
device passthrough and proper runtime configuration.

Features:
- GPU detection and configuration (enable-gpu, gpu-device-ids config)
- Worker GPU tagging (gpu, gpu-type=nvidia, gpu-count=N)
- Cross-application TSA relation (web-tsa/worker-tsa) for automatic key exchange
- Containerd GPU configuration with nvidia-container-runtime
- GPU status display in juju status
- Comprehensive documentation and deployment guides

Performance:
- Benchmark shows 12.7x speedup for matrix operations (GPU vs CPU)
- CPU: 1.133s at 220.66 GFLOPS
- GPU: 0.089s at 2798.90 GFLOPS (NVIDIA RTX A500)

Modified Files:
- config.yaml: Add GPU configuration options
- metadata.yaml: Add TSA relation endpoints
- lib/concourse_common.py: GPU detection functions
- lib/concourse_worker.py: GPU configuration and tagging
- src/charm.py: TSA relation handlers
- README.md: GPU documentation section

New Files:
- GPU_SUPPORT.md: Comprehensive GPU setup guide
- GPU_IMPLEMENTATION_COMPLETE.md: Implementation details and manual steps
- BENCHMARK_RESULTS.md: CPU vs GPU performance comparison
- benchmark-cpu-vs-gpu.yaml: Performance benchmark pipeline
- gpu-test-pipeline.yaml: GPU functionality test pipeline
- test-gpu-devices.yaml: Device visibility test
- simple-gpu-test.yaml: Simple GPU test
- deploy-gpu-example.sh: GPU deployment helper script

Testing:
- GPU device visibility verified (/dev/nvidia0, /dev/nvidiactl, etc.)
- nvidia-smi functional in containers
- CUDA runtime accessible
- Real-world ML workload tested with PyTorch

Note: Requires manual GPU wrapper setup for LXD environments (documented).
Future work: Automate GPU wrapper installation in charm.

Resolves: GPU support for ML/AI workloads on Concourse CI

--- a/config.yaml
+++ b/config.yaml
@@ -102,3 +102,21 @@ options:
       Default: 1.1.1.1,8.8.8.8
     default: "1.1.1.1,8.8.8.8"
     type: string
+  
+  enable-gpu:
+    description: |
+      Enable GPU support for this worker.
+      Requires NVIDIA drivers and nvidia-container-toolkit installed on host.
+      Worker will be tagged with GPU capabilities for job targeting.
+      Default: false
+    default: false
+    type: boolean
+  
+  gpu-device-ids:
+    description: |
+      GPU device IDs to expose to worker (comma-separated).
+      Use "all" to expose all GPUs, or specify devices like "0,1".
+      Only used when enable-gpu is true.
+      Default: all
+    default: "all"
+    type: string
