feat: Add PostgreSQL 16 support with dynamic port configuration
Major Features:
- PostgreSQL 16+ integration with Juju secrets API
- Dynamic web port configuration with automatic service restart
- Privileged port support (port 80) via CAP_NET_BIND_SERVICE
- Automatic external-URL detection based on unit IP
- Automatic port opening in Juju status
- Ubuntu 24.04 LTS support

Changes:
- Changed PostgreSQL interface from pgsql to postgresql_client
- Added DatabaseRequires library for PostgreSQL 16+
- Implemented Juju secrets API for credential management
- Enhanced systemd service with AmbientCapabilities
- Updated all documentation to PostgreSQL 16 and Ubuntu 24.04
- Added port management (open_port) in charm lifecycle

Documentation:
- Added CHANGELOG.md with complete feature history
- Added DEPLOYMENT_GUIDE.md with quick reference
- Added UPDATES_SUMMARY.md with technical details
- Updated README.md with new features and examples

Breaking Changes:
- PostgreSQL relation endpoint changed from :db to :database
- Base OS changed to Ubuntu 24.04 (22.04 no longer supported)
- Requires PostgreSQL 16/stable channel

Tested on: Pico environment with LXD containers
Verified: Port changes (80 ↔ 8888), PostgreSQL 16 integration, external access

--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,8 @@ options:
   web-port:
     description: |
       Port for Concourse web UI and API server.
+      Supports dynamic changes with automatic service restart.
+      Privileged ports (< 1024) are supported via CAP_NET_BIND_SERVICE.
       Default: 8080
     default: 8080
     type: int
@@ -35,7 +37,8 @@ options:
   external-url:
     description: |
       External URL for Concourse web UI (used for redirects and webhooks).
-      If not set, defaults to http://<unit-ip>:<web-port>
+      If not set, automatically detects and uses http://<unit-ip>:<web-port>
+      Important: Set this to your actual external URL if behind a proxy/NAT.
     default: ""
     type: string
   
