--- a/charmcraft.yaml
+++ b/charmcraft.yaml
@@ -1,12 +1,8 @@
 type: charm
+base: ubuntu@24.04
 
-bases:
-  - build-on:
-      - name: ubuntu
-        channel: "22.04"
-    run-on:
-      - name: ubuntu
-        channel: "22.04"
+platforms:
+  amd64:
 
 parts:
   charm:
