feat: implement cross-application version upgrade coordination
This commit implements automatic version synchronization across Concourse
CI deployments, enabling workers to automatically upgrade when the web
server upgrades. It also simplifies configuration option names and improves
status messaging.

Key Features:
- Cross-application upgrade coordination via relation data
- Automatic worker upgrades when web server version changes
- Bidirectional upgrade/downgrade support (e.g., 7.12.1 ↔ 7.14.3)
- Works with all deployment modes (auto, all, separate apps)

Implementation Details:

1. Version Propagation
   - Web servers publish 'concourse-version' in relation data
   - Published via TSA relations (for separate worker apps)
   - Published via peer relations (for mode=auto deployments)
   - Version updates trigger relation-changed events on workers

2. Automatic Worker Upgrades
   - Workers detect version mismatches on relation-changed events
   - Auto-upgrade flow: stop service → download → install → restart
   - Status updates: "Auto-upgrading Concourse CI to X.X.X..."
   - Download progress: "Downloading Concourse CI X.X.X... XX%"
   - Prevents "text file busy" errors by stopping services first

3. Configuration Simplification
   - Renamed 'deployment-mode' → 'mode' (shorter, clearer)
   - Renamed 'concourse-version' → 'version' (consistency)
   - Updated all documentation and examples

4. Improved Status Messages
   - Unified branding: "Concourse CI" in all messages
   - Download: "Downloading Concourse CI 7.14.3... 45%"
   - Upgrade: "Upgrading Concourse CI to 7.14.3..."
   - Auto-upgrade: "Auto-upgrading Concourse CI to 7.14.3..."
   - Version in status: "Web server ready (v7.14.3)"

Testing:
- ✅ mode=auto with 3 units (1 web + 2 workers)
- ✅ Separate applications (web app + worker app via TSA relation)
- ✅ Upgrade propagation: 7.12.1 → 7.14.3
- ✅ Downgrade support: 7.14.3 → 7.12.1
- ✅ All workers auto-upgrade when leader upgrades

Documentation Updates:
- Adde

--- a/.github/workflows/deployment-test.yml
+++ b/.github/workflows/deployment-test.yml
@@ -36,7 +36,7 @@ jobs:
           retention-days: 1
 
   test-all-mode:
-    name: Test deployment-mode=all
+    name: Test mode=all
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: build-charm
@@ -73,7 +73,7 @@ jobs:
 
       - name: Deploy charms
         run: |
-          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config deployment-mode=all
+          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config mode=all
           juju deploy postgresql --channel 16/stable
 
       - name: Relate charms
@@ -118,7 +118,7 @@ jobs:
               repository: busybox
           run:
             path: echo
-            args: ["Hello from deployment-mode=all!"]
+            args: ["Hello from mode=all!"]
           EOF
 
       - name: Execute test task
@@ -147,7 +147,7 @@ jobs:
           juju destroy-model concourse-all --destroy-storage --force --no-wait -y || true
 
   test-auto-mode:
-    name: Test deployment-mode=auto
+    name: Test mode=auto
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: build-charm
@@ -184,7 +184,7 @@ jobs:
 
       - name: Deploy charms (3 units in auto mode)
         run: |
-          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config deployment-mode=auto -n 3
+          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config mode=auto -n 3
           juju deploy postgresql --channel 16/stable
 
       - name: Relate charms
@@ -231,7 +231,7 @@ jobs:
               repository: busybox
           run:
             path: echo
-            args: ["Hello from deployment-mode=auto!"]
+            args: ["Hello from mode=auto!"]
           EOF
 
       - name: Execute test task
@@ -260,7 +260,7 @@ jobs:
           juju destroy-model concourse-auto --destroy-storage --force --no-wait -y || true
 
   test-web-worker-mode:
-    name: Test deployment-mode=web+worker (with mounts)
+    name: Test mode=web+worker (with mounts)
     runs-on: ubuntu-latest
     timeout-minutes: 30
     needs: build-charm
@@ -297,8 +297,8 @@ jobs:
 
       - name: Deploy server and worker separately
         run: |
-          juju deploy ./concourse-ci-machine_amd64.charm web --config deployment-mode=web
-          juju deploy ./concourse-ci-machine_amd64.charm worker --config deployment-mode=worker -n 2
+          juju deploy ./concourse-ci-machine_amd64.charm web --config mode=web
+          juju deploy ./concourse-ci-machine_amd64.charm worker --config mode=worker -n 2
           juju deploy postgresql --channel 16/stable
 
       - name: Relate charms
