--- a/actions.yaml
+++ b/actions.yaml
@@ -25,8 +25,8 @@ run-migrations:
 get-admin-password:
   description: Get or generate initial admin password
 
-update-concourse-version:
-  description: Update to a new Concourse CI version
+upgrade:
+  description: Upgrade Concourse CI to a specific version
   params:
     version:
       description: Target Concourse version (e.g., 7.14.3)
