test: add comprehensive upgrade tests to CI workflow
Add upgrade mechanism testing to all three deployment mode tests in the
GitHub Actions workflow. Each test now validates automatic version upgrades
from 7.12.1 to the latest release.

Changes:
- Deploy all test scenarios with version=7.12.1 initially
- Fetch latest version dynamically from GitHub API releases endpoint
- Test upgrade action: `juju run .../leader upgrade version=<latest>`
- Verify version propagation in status messages
- Test that upgraded deployments continue to work

Test Coverage:

1. mode=all test:
   - Deploy with version=7.12.1
   - Upgrade to latest via action
   - Verify version in status message
   - Execute test task on upgraded deployment

2. mode=auto test (3 units):
   - Deploy leader + 2 workers with version=7.12.1
   - Upgrade leader to latest
   - Verify workers automatically upgrade via peer relation
   - Check all 3 units show same version
   - Execute test task on upgraded deployment

3. mode=web+worker test (separate apps):
   - Deploy web and 2 workers with version=7.12.1
   - Upgrade web server to latest
   - Verify workers automatically upgrade via TSA relation
   - Check all units (1 web + 2 workers) upgraded
   - Execute test task on upgraded deployment
   - Mount verification still works after upgrade

Implementation Notes:
- Uses GitHub API: /repos/concourse/concourse/releases endpoint
- More stable than /releases/latest endpoint
- Parses first release tag as latest version
- Extended timeouts to accommodate download/install time
- Tests verify cross-application upgrade coordination

--- a/.github/workflows/deployment-test.yml
+++ b/.github/workflows/deployment-test.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Deploy charms
         run: |
-          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config mode=all
+          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config mode=all --config version=7.12.1
           juju deploy postgresql --channel 16/stable
 
       - name: Relate charms
@@ -141,6 +141,40 @@ jobs:
             exit 1
           fi
 
+      - name: Test version upgrade (7.12.1 → latest)
+        run: |
+          echo "=== Current version ==="
+          juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[].value.message'
+          
+          echo "=== Fetching latest Concourse version from GitHub ==="
+          LATEST_VERSION=$(curl -s https://api.github.com/repos/concourse/concourse/releases | jq -r '.[0].tag_name' | sed 's/^v//')
+          echo "Latest version: $LATEST_VERSION"
+          
+          echo "=== Upgrading to $LATEST_VERSION ==="
+          juju run concourse-ci/leader upgrade version=$LATEST_VERSION
+          
+          echo "=== Waiting for upgrade to complete ==="
+          sleep 30
+          juju-wait -m concourse-all -t 600
+          
+          echo "=== Verifying upgraded version ==="
+          juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[].value.message'
+          
+          # Verify version in status message
+          VERSION_CHECK=$(juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[].value.message' | grep -c "v$LATEST_VERSION" || true)
+          if [ "$VERSION_CHECK" -lt 1 ]; then
+            echo "Upgrade verification failed: version not updated to $LATEST_VERSION"
+            exit 1
+          fi
+          echo "✅ Upgrade to $LATEST_VERSION successful"
+
+      - name: Verify upgraded deployment still works
+        run: |
+          export CONCOURSE_URL=$(cat concourse-ip.txt)
+          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
+          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p $CONCOURSE_PASSWORD
+          fly -t ci execute -c task.yml
+
       - name: Cleanup
         if: always()
         run: |
@@ -184,7 +218,7 @@ jobs:
 
       - name: Deploy charms (3 units in auto mode)
         run: |
-          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config mode=auto -n 3
+          juju deploy ./concourse-ci-machine_amd64.charm concourse-ci --config mode=auto --config version=7.12.1 -n 3
           juju deploy postgresql --channel 16/stable
 
       - name: Relate charms
@@ -254,6 +288,49 @@ jobs:
             exit 1
           fi
 
+      - name: Test version upgrade with auto worker upgrade (7.12.1 → latest)
+        run: |
+          echo "=== Current version on all units ==="
+          juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[] | "\(.key): \(.value.message)"'
+          
+          echo "=== Fetching latest Concourse version from GitHub ==="
+          LATEST_VERSION=$(curl -s https://api.github.com/repos/concourse/concourse/releases | jq -r '.[0].tag_name' | sed 's/^v//')
+          echo "Latest version: $LATEST_VERSION"
+          
+          echo "=== Upgrading leader (workers should auto-upgrade) ==="
+          juju run concourse-ci/leader upgrade version=$LATEST_VERSION
+          
+          echo "=== Waiting for leader upgrade to complete ==="
+          sleep 30
+          
+          echo "=== Checking if workers are auto-upgrading ==="
+          juju status concourse-ci
+          
+          echo "=== Waiting for all units to settle ==="
+          juju-wait -m concourse-auto -t 900
+          
+          echo "=== Verifying all units upgraded ==="
+          juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[] | "\(.key): \(.value.message)"'
+          
+          # Verify all units show the new version
+          UNIT_COUNT=$(juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | length')
+          VERSION_COUNT=$(juju status concourse-ci --format=json | jq -r '.applications."concourse-ci".units | to_entries[].value.message' | grep -c "v$LATEST_VERSION" || true)
+          
+          echo "Total units: $UNIT_COUNT, Units at v$LATEST_VERSION: $VERSION_COUNT"
+          
+          if [ "$VERSION_COUNT" -ne "$UNIT_COUNT" ]; then
+            echo "❌ Auto-upgrade verification failed: not all workers upgraded"
+            exit 1
+          fi
+          echo "✅ All units auto-upgraded to $LATEST_VERSION successfully"
+
+      - name: Verify upgraded deployment still works
+        run: |
+          export CONCOURSE_URL=$(cat concourse-ip.txt)
+          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
+          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p $CONCOURSE_PASSWORD
+          fly -t ci execute -c task.yml
+
       - name: Cleanup
         if: always()
         run: |
@@ -297,8 +374,8 @@ jobs:
 
       - name: Deploy server and worker separately
         run: |
-          juju deploy ./concourse-ci-machine_amd64.charm web --config mode=web
-          juju deploy ./concourse-ci-machine_amd64.charm worker --config mode=worker -n 2
+          juju deploy ./concourse-ci-machine_amd64.charm web --config mode=web --config version=7.12.1
+          juju deploy ./concourse-ci-machine_amd64.charm worker --config mode=worker --config version=7.12.1 -n 2
           juju deploy postgresql --channel 16/stable
 
       - name: Relate charms
@@ -408,6 +485,58 @@ jobs:
           export CONCOURSE_PASSWORD=$(cat admin-password.txt)
           fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p $CONCOURSE_PASSWORD
           fly -t ci execute -c task.yml || (echo "Concourse task failed to see mount" && exit 1)
+
+      - name: Test version upgrade across separate apps (7.12.1 → latest)
+        run: |
+          echo "=== Current version on all applications ==="
+          juju status web --format=json | jq -r '.applications.web.units | to_entries[] | "web/\(.key): \(.value.message)"'
+          juju status worker --format=json | jq -r '.applications.worker.units | to_entries[] | "worker/\(.key): \(.value.message)"'
+          
+          echo "=== Fetching latest Concourse version from GitHub ==="
+          LATEST_VERSION=$(curl -s https://api.github.com/repos/concourse/concourse/releases | jq -r '.[0].tag_name' | sed 's/^v//')
+          echo "Latest version: $LATEST_VERSION"
+          
+          echo "=== Upgrading web server (workers should auto-upgrade via TSA relation) ==="
+          juju run web/leader upgrade version=$LATEST_VERSION
+          
+          echo "=== Waiting for web upgrade to complete ==="
+          sleep 30
+          
+          echo "=== Checking if workers are auto-upgrading ==="
+          juju status
+          
+          echo "=== Waiting for all applications to settle ==="
+          juju-wait -m concourse-ci -t 900
+          
+          echo "=== Verifying all units upgraded ==="
+          juju status web --format=json | jq -r '.applications.web.units | to_entries[] | "web/\(.key): \(.value.message)"'
+          juju status worker --format=json | jq -r '.applications.worker.units | to_entries[] | "worker/\(.key): \(.value.message)"'
+          
+          # Verify web server upgraded
+          WEB_VERSION_CHECK=$(juju status web --format=json | jq -r '.applications.web.units | to_entries[].value.message' | grep -c "v$LATEST_VERSION" || true)
+          if [ "$WEB_VERSION_CHECK" -lt 1 ]; then
+            echo "❌ Web server upgrade failed"
+            exit 1
+          fi
+          
+          # Verify all workers auto-upgraded
+          WORKER_COUNT=$(juju status worker --format=json | jq -r '.applications.worker.units | length')
+          WORKER_VERSION_COUNT=$(juju status worker --format=json | jq -r '.applications.worker.units | to_entries[].value.message' | grep -c "v$LATEST_VERSION" || true)
+          
+          echo "Total workers: $WORKER_COUNT, Workers at v$LATEST_VERSION: $WORKER_VERSION_COUNT"
+          
+          if [ "$WORKER_VERSION_COUNT" -ne "$WORKER_COUNT" ]; then
+            echo "❌ Auto-upgrade verification failed: not all workers upgraded"
+            exit 1
+          fi
+          echo "✅ Web and all workers auto-upgraded to $LATEST_VERSION successfully"
+
+      - name: Verify upgraded deployment still works
+        run: |
+          export CONCOURSE_URL=$(cat concourse-ip.txt)
+          export CONCOURSE_PASSWORD=$(cat admin-password.txt)
+          fly -t ci login -c http://$CONCOURSE_URL:8080 -u admin -p $CONCOURSE_PASSWORD
+          fly -t ci execute -c task.yml
 
       - name: Cleanup
         if: always()
