fix: add mount configuration for tagged worker in CI test
Fix the worker tag test to properly configure LXC mounts for the tagged
worker container. The mount verification task (task.yml) requires mounts
to be configured on all workers that will execute it.

Changes:
- Extended mount configuration loop to include worker-with-tag application
- Added second loop to discover and configure tagged worker containers
- Both read-only and writable mounts now configured on tagged worker
- Ensures mount verification task can run successfully on tagged worker

Issue:
Previously, only the regular worker units (worker/0, worker/1) had mounts
configured. When task.yml was executed with --tag special-worker, it would
fail because the tagged worker (worker-with-tag/0) didn't have the required
/srv/config_test and /srv/config_test_writable mounts.

Solution:
Added a second loop that:
1. Discovers worker-with-tag units from juju status
2. Finds corresponding LXC containers
3. Configures same mount devices as regular workers
4. Allows mount verification task to run on any worker

--- a/.github/workflows/deployment-test.yml
+++ b/.github/workflows/deployment-test.yml
@@ -444,6 +444,23 @@ jobs:
             # add a writable mount (suffix-based test)
             lxc config device add $CONTAINER config_test_rw disk source="/tmp/config-test-mount-writable" path="/srv/config_test_writable" readonly=false shift=true
           done
+          
+          # Also mount folders into tagged worker container
+          TAGGED_UNITS=$(juju status worker-with-tag --format=json | jq -r '.applications."worker-with-tag".units | keys[]' || true)
+          if [ -z "$TAGGED_UNITS" ]; then echo "No tagged worker units found"; exit 1; fi
+          for UNIT in $TAGGED_UNITS; do
+            MACHINE=$(juju status $UNIT --format=json | jq -r '.applications."worker-with-tag".units["'"$UNIT"'"].machine')
+            CONTAINER=$(lxc list --format=csv -c n | grep "^juju-.*-${MACHINE}$" | head -1)
+            if [ -z "$CONTAINER" ]; then echo "No container for machine $MACHINE"; continue; fi
+            echo "Adding mounts to tagged worker $CONTAINER"
+            # remove any existing devices with the same names
+            lxc config device remove $CONTAINER config_test_ro || true
+            lxc config device remove $CONTAINER config_test_rw || true
+            # add a read-only mount
+            lxc config device add $CONTAINER config_test_ro disk source="/tmp/config-test-mount" path="/srv/config_test" readonly=true
+            # add a writable mount (suffix-based test)
+            lxc config device add $CONTAINER config_test_rw disk source="/tmp/config-test-mount-writable" path="/srv/config_test_writable" readonly=false shift=true
+          done
 
       - name: Create mount verification task
         run: |
