fix: support multiple TSA relations and persistent upgrades
This commit includes several important fixes and improvements:
- Updated src/charm.py to handle multiple relations on the web-tsa endpoint, fixing a TooManyRelatedAppsError during version publication.
- Modified src/charm.py to ensure that OCI wrappers (GPU and folder mounts) are re-installed after any Concourse version upgrade (manual, automatic, or action-triggered).
- Updated README.md and DEPLOYMENT_GUIDE.md to recommend setting the 'version' configuration before running the 'upgrade' action to ensure persistent changes.
- Updated the CI workflow to follow the recommended persistent upgrade pattern.

--- a/.github/workflows/deployment-test.yml
+++ b/.github/workflows/deployment-test.yml
@@ -149,6 +149,9 @@ jobs:
           UPGRADE_VERSION="7.14.3"
           echo "Upgrade version: $UPGRADE_VERSION"
           
+          echo "=== Setting version configuration for persistence ==="
+          juju config concourse-ci version=$UPGRADE_VERSION
+          
           echo "=== Upgrading to $UPGRADE_VERSION ==="
           juju run concourse-ci/leader upgrade version=$UPGRADE_VERSION
           
@@ -294,6 +297,9 @@ jobs:
           
           UPGRADE_VERSION="7.14.3"
           echo "Upgrade version: $UPGRADE_VERSION"
+          
+          echo "=== Setting version configuration for persistence ==="
+          juju config concourse-ci version=$UPGRADE_VERSION
           
           echo "=== Upgrading leader (workers should auto-upgrade) ==="
           juju run concourse-ci/leader upgrade version=$UPGRADE_VERSION
@@ -513,6 +519,11 @@ jobs:
           
           UPGRADE_VERSION="7.14.3"
           echo "Upgrade version: $UPGRADE_VERSION"
+          
+          echo "=== Setting version configuration for persistence on all applications ==="
+          juju config web version=$UPGRADE_VERSION
+          juju config worker version=$UPGRADE_VERSION
+          juju config worker-with-tag version=$UPGRADE_VERSION
           
           echo "=== Upgrading web server (all workers should auto-upgrade via TSA relation) ==="
           juju run web/leader upgrade version=$UPGRADE_VERSION
